# hermes-web-relay

./: .dockerignore  .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  ruff.toml  web-relay-blueprint.md
.claude/workflows/: hermes-web-relay-build.js
.github/workflows/: test.yml
docker/: Dockerfile  compose.yml
scripts/: __init__.py  e2e_demo.py  provision_coolify.py
src/webrelay/: __init__.py
src/webrelay/agent/: __init__.py  __main__.py  client.py  config.py  reconnect.py  setup.py
src/webrelay/agent/bridges/: __init__.py  approval_bridge.py  file_bridge.py  hermes_bridge.py  ledger_bridge.py
src/webrelay/agent/hooks/: __init__.py  preToolUse.py
src/webrelay/server/: __init__.py  db.py  main.py  models.py  protocol.py  relay_hub.py
src/webrelay/server/routes/: __init__.py  approvals.py  auth.py  chat.py  files.py  ledgers.py  relay.py  status.py
src/webrelay/server/static/: app.css  manifest.json
src/webrelay/server/templates/: approvals.html  base.html  file_browser.html
src/webrelay/server/templates/auth/: login.html
src/webrelay/server/templates/chat/: index.html
src/webrelay/server/templates/ledgers/: detail.html  index.html
tests/: __init__.py  conftest.py  test_agent_setup.py  test_base_template.py  test_bridge_approval.py  test_bridge_file.py  test_bridge_hermes.py  test_bridge_ledger.py  test_client_impl.py  test_db.py  test_main_wiring.py  test_models.py  test_protocol.py  test_provision_coolify.py  test_relay_hub_impl.py  test_route_approvals.py  test_route_chat_disconnect.py  test_route_files.py  test_skeletons.py
(+2 files in other folders)
