[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-web-relay"
version = "0.1.0"
description = "Mobile-first HTMX UI that proxies a local Hermes agent through a Coolify-hosted FastAPI server over an outbound WebSocket."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Agent" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "itsdangerous>=2.1",
    "websockets>=12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "watchfiles>=0.21",
    "python-dotenv>=1.0",
    "argon2-cffi>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
webrelay-server = "webrelay.server.main:run"
webrelay-agent = "webrelay.agent.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["webrelay*"]

[tool.setuptools.package-data]
"webrelay.server.templates" = ["*.html", "*.j2", "*.gitkeep"]
"webrelay.server.static" = ["*.css", "*.js", "*.json", "*.gitkeep"]
